Modified makefile to add a 'run' target

--- a/make/gnu/makefile
+++ b/make/gnu/makefile
@@ -30,3 +30,6 @@ memallocate.mod : ../../src/memalloc.f90
 
 clean : 
 	rm stap stap.o datain.o elcal.o assem.o globals.o globals.mod truss.o memalloc.o memallocate.mod
+
+run :
+	./stap stap90.in
