Changed Makefile. Compiling and solving run normally

--- a/make/gnu/makefile
+++ b/make/gnu/makefile
@@ -1,5 +1,5 @@
-stap : stap.o datain.o elcal.o assem.o  globals.o truss.o memalloc.o
-	gfortran -o stap stap.o datain.o elcal.o assem.o  globals.o truss.o memalloc.o
+stap : stap.o datain.o elcal.o assem.o  globals.o truss.o memalloc.o QUADS_455009688.o solid.o
+	gfortran -o stap stap.o datain.o elcal.o assem.o  globals.o truss.o memalloc.o QUADS_455009688.o solid.o
 
 stap.o : ../../src/stap.f90 ../../src/globals.f90 globals.mod memallocate.mod
 	gfortran -c  ../../src/stap.f90
@@ -16,6 +16,12 @@ elcal.o : ../../src/elcal.f90 ../../src/globals.f90 globals.mod memallocate.mod
 truss.o : ../../src/truss.f90 ../../src/globals.f90 globals.mod memallocate.mod
 	gfortran -c  ../../src/truss.f90
 
+solid.o : ../../src/solid.f90 ../../src/globals.f90 globals.mod memallocate.mod ../../src/QUADS_455009688.FOR
+	gfortran -c  ../../src/solid.f90
+
+QUADS_455009688.o : ../../src/QUADS_455009688.FOR
+	gfortran -c ../../src/QUADS_455009688.FOR
+
 globals.o : ../../src/globals.f90
 	gfortran -c  ../../src/globals.f90 
 
@@ -29,7 +35,7 @@ memallocate.mod : ../../src/memalloc.f90
 	gfortran -c  ../../src/memalloc.f90
 
 clean : 
-	rm stap stap.o datain.o elcal.o assem.o globals.o globals.mod truss.o memalloc.o memallocate.mod
+	rm stap stap.o datain.o elcal.o assem.o globals.o globals.mod truss.o memalloc.o memallocate.mod solid.o QUADS_455009688.o
 
 run : stap
 	./stap stap90.in
